# YP_async-python-sprint-1

./: README.md  api_test.py  config.py  forecasting.py  main.py  pyproject.toml  tasks.py  utils.py
tests/: test_data_aggregation.py  test_data_analyzing.py  test_data_calculation.py  test_data_fetching.py
