[tool.poetry]
name = "async-python-sprint-1"
version = "0.1.0"
description = ""
authors = ["Dmitry Murzin <dmitry@murzin.life>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
